--- a/Java Phase 2 Programs/SimpleMaven/pom.xml
+++ b/Java Phase 2 Programs/SimpleMaven/pom.xml
@@ -3,4 +3,22 @@
   <groupId>Phase2</groupId>
   <artifactId>SimpleMaven</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+ <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  
+  
+  <dependencies>
+	  
+	  <dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.12</version>
+	 </dependency>
+
+  </dependencies>
+  
 </project>
