--- a/Phase 3 Spring MVC/SpringMVCInfo/pom.xml
+++ b/Phase 3 Spring MVC/SpringMVCInfo/pom.xml
@@ -1,36 +1,34 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>SpringSimpleMVC</groupId>
-  <artifactId>SpringSimpleMVC</artifactId>
+  <groupId>SpringMVCInfo</groupId>
+  <artifactId>SpringMVCInfo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   <build>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration>
-          <release>17</release>
+          <release>11</release>
         </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.2.3</version>
       </plugin>
     </plugins>
   </build>
   
   <dependencies>
 	  
-	  <dependency>
+	<dependency>
     	<groupId>org.springframework</groupId>
     	<artifactId>spring-webmvc</artifactId>
     	<version>5.2.12.RELEASE</version>
 	</dependency>
 
-<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-<dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>3.1.0</version>
-    <scope>provided</scope>
-</dependency>
-
   </dependencies>
+  
   
 </project>
