--- a/Phase 3 Spring MVC/SpringMVCNewApp/pom.xml
+++ b/Phase 3 Spring MVC/SpringMVCNewApp/pom.xml
@@ -1,8 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>SpringSimpleMVC</groupId>
-  <artifactId>SpringSimpleMVC</artifactId>
+  <groupId>SpringMVCNewApp</groupId>
+  <artifactId>SpringMVCNewApp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <packaging>war</packaging>
   <build>
     <plugins>
       <plugin>
@@ -12,10 +13,15 @@
           <release>17</release>
         </configuration>
       </plugin>
+      <plugin>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.2.3</version>
+      </plugin>
     </plugins>
   </build>
   
   <dependencies>
+	
 	  
 	  <dependency>
     	<groupId>org.springframework</groupId>
@@ -23,14 +29,7 @@
     	<version>5.2.12.RELEASE</version>
 	</dependency>
 
-<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
-<dependency>
-    <groupId>javax.servlet</groupId>
-    <artifactId>javax.servlet-api</artifactId>
-    <version>3.1.0</version>
-    <scope>provided</scope>
-</dependency>
 
+	  
   </dependencies>
-  
 </project>
