--- a/Phase 3 Spring MVC/SpringMVCInfo/src/main/webapp/WEB-INF/web.xml
+++ b/Phase 3 Spring MVC/SpringMVCInfo/src/main/webapp/WEB-INF/web.xml
@@ -9,4 +9,15 @@
     <welcome-file>default.jsp</welcome-file>
     <welcome-file>default.htm</welcome-file>
   </welcome-file-list>
+  
+  
+  <servlet>
+  	<servlet-name>dispatcher</servlet-name>
+  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  		<servlet-name>dispatcher</servlet-name>
+  		<url-pattern>/</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
