--- a/Phase 3 Spring MVC/SpringMVCInfo/pom.xml
+++ b/Phase 3 Spring MVC/SpringMVCInfo/pom.xml
@@ -28,6 +28,18 @@
     	<version>5.2.12.RELEASE</version>
 	</dependency>
 
+	<dependency>
+    	<groupId>org.springframework</groupId>
+    	<artifactId>spring-jdbc</artifactId>
+    	<version>5.2.12.RELEASE</version>
+	</dependency>
+
+	<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.16</version>
+	</dependency>
+
   </dependencies>
   
   
