--- a/Spring boot programs/SimpleSpringBootMVC/pom.xml
+++ b/Spring boot programs/SimpleSpringBootMVC/pom.xml
@@ -18,5 +18,12 @@
     	<version>2.5.2</version>
 	</dependency>
 
+	<dependency>
+    	<groupId>org.apache.tomcat.embed</groupId>
+    	<artifactId>tomcat-embed-jasper</artifactId>
+    	<version>9.0.38</version>
+	</dependency>
+
+	
 </dependencies>
 </project>
