--- a/Spring boot programs/SimpleSpringBootMVC/pom.xml
+++ b/Spring boot programs/SimpleSpringBootMVC/pom.xml
@@ -24,6 +24,24 @@
     	<version>9.0.38</version>
 	</dependency>
 
+<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.0</version>
+</dependency>
+
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		<version>2.5.2</version>
+	</dependency>
+	
+	<dependency>
+    	<groupId>mysql</groupId>
+    	<artifactId>mysql-connector-java</artifactId>
+    	<version>8.0.16</version>
+	</dependency>
 	
 </dependencies>
+
 </project>
