--- a/Spring boot programs/SimpleSpringBootMVC/src/main/resources/application.properties
+++ b/Spring boot programs/SimpleSpringBootMVC/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 server.port=9090
 spring.mvc.view.prefix= ./
 spring.mvc.view.suffix= .jsp
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.username=root
+spring.datasource.password=root@123
+spring.jpa.hibernate.ddl-auto=create 
+
