--- a/Spring boot programs/SpringBootThymeleafAndSpringData/SpringBootThymeleafAndSpringData/src/main/resources/application.properties
+++ b/Spring boot programs/SpringBootThymeleafAndSpringData/SpringBootThymeleafAndSpringData/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
 spring.datasource.password=root@123
-spring.jpa.hibernate.ddl-auto=create 
+spring.jpa.hibernate.ddl-auto=update 
